--- a/kadai5-1.html
+++ b/kadai5-1.html
@@ -20,8 +20,14 @@
             const data = await response.json();
 
             // zipcloudのAPI呼び出して結果を表示する
-            document.getElementById("result").innerHTML =  myForm.zipcode.value; // 現状ではそのまま表示しているだけ
-        }
+        if (data.results) {
+                const address = data.results[0];
+                document.getElementById("result").innerHTML =
+                    `${address.address1}${address.address2}${address.address3}`;
+            } else {
+              　document.getElementById("result").innerHTML = "該当する住所が見つかりません。";
+            }
+    }
     </script>
 </body>
 </html>
