--- a/kadai5-2.html
+++ b/kadai5-2.html
@@ -14,6 +14,9 @@
     <script>
         async function some_api(myForm) {
             // ここにコードを書く
+            const name = myForm.form_data.value.toLowerCase();
+            const response = await fetch(`https://pokeapi.co/api/v2/pokemon/${name}`);
+            const data = await response.json();
             document.getElementById("result").innerHTML += myForm.form_data.value+"<br />";
             document.apiform.reset();
         }
