--- a/kadai5-2.html
+++ b/kadai5-2.html
@@ -17,6 +17,12 @@
             const name = myForm.form_data.value.toLowerCase();
             const response = await fetch(`https://pokeapi.co/api/v2/pokemon/${name}`);
             const data = await response.json();
+
+            const imageUrl = data.sprites.front_default;
+            const type = data.types.map(t => t.type.name).join(", ");
+
+            document.getElementById("result").innerHTML +=
+                 `<p><strong>${name}</strong> (Type: ${type})</p><img src="${imageUrl}" alt="${name}"><hr>`;
             document.getElementById("result").innerHTML += myForm.form_data.value+"<br />";
             document.apiform.reset();
         }
